// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entitysetupusage;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";

option java_multiple_files = true;
option go_package = "953_events_api";

message EntityDetailWithSetupUsageDetailProtoDTO {
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredEntity = 1;
  string type = 2;
  oneof setupUsageDetail {
    SecretReferredByConnectorSetupUsageDetailProtoDTO secretConnectorDetail = 3;
    EntityReferredByPipelineDetailProtoDTO entityInPipelineDetail = 4;
    EntityReferredByInfraSetupUsageDetailProtoDTO entityInInfraDetail = 5;
  }

  message SecretReferredByConnectorSetupUsageDetailProtoDTO {
    string fieldName = 1;
  }

  message EntityReferredByPipelineDetailProtoDTO {
    string identifier = 1;
    PipelineDetailType type = 2;
  }

  message EntityReferredByInfraSetupUsageDetailProtoDTO {
    string environmentIdentifier = 1;
  }

  enum PipelineDetailType {
    STAGE_IDENTIFIER = 0;
    VARIABLE_NAME = 1;
    PIPELINE_IDENTIFIER = 2;
  }
}
